extends Control


func _on_btn_info_pressed() -> void:
	pass # Replace with function body.


func _on_btn_new_pressed() -> void:
	pass # Replace with function body.


func _on_btn_load_pressed() -> void:
	pass # Replace with function body.


func _on_btn_setting_pressed() -> void:
	pass # Replace with function body.


func _on_btn_exit_pressed() -> void:
	get_tree().quit()
